<resources>
    <string name="app_name">PDF Player</string>

    <!-- Home Page -->
    <string name="play">Play</string>
    <string name="compose">Compose</string>
    <string name="settings">Settings</string>

    <!-- Compose -->
    <string name="newlist">New</string>
    <string name="management">Management</string>
    <string name="loadplaylist">Load playlist.</string>
    <string name="storeplaylist">Store playlist.</string>
    <string name="nodatainplaylist">No data in playlist</string>
    <string name="nodatainfolder">No data in folder</string>
    <string name="title_playlist">Playlist</string>
    <string name="title_source">Source</string>
    <string name="overfilesselected">Over 500 files selected</string>

    <!-- Dialog -->
    <string name="overwritetofile">Overwrite File %d ?</string>
    <string name="loadfromfile">Load from file</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="continueprevious">Continue previous</string>
    <string name="saveorabort">Save or Abort ?</string>
    <string name="editordelete">Edit or Delete ?</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="pleasepluginusb">Please plug in USB storage</string>
    <string name="selectusbstorage">Select USB storage</string>

    <!-- PlayList -->
    <string name="file1">File 1</string>
    <string name="file2">File 2</string>
    <string name="file3">File 3</string>
    <string name="file4">File 4</string>
    <string name="file5">File 5</string>
    <string name="file6">File 6</string>
    <string name="file7">File 7</string>

    <!-- Settings -->
    <string name="storage">Storage</string>
    <string name="internal">Internal</string>
    <string name="usb">USB</string>
    <string name="sdcard">SD card</string>
    <string name="transiteffect">Transit Effect</string>
    <string name="repeat">Repeat</string>
    <string name="mode">Mode</string>

    <string name="repeatmodetitle">Repeat Mode</string>
    <string name="repeatonce">Repeat once</string>
    <string name="repeatall">Repeat all</string>

    <string name="slideshoweffect">Slideshow Effect</string>
    <string name="slideshow_random">Random</string>
    <string name="slideshow_bounce">Bounce</string>
    <string name="slideshow_fade_in_out">Fade in/out</string>
    <string name="slideshow_top_to_bottom">Top to bottom</string>
    <string name="slideshow_zoom">Zoom</string>
    <string name="slideshow_left_to_right">Left to right</string>
    <string name="slideshow_right_to_left">Right to left</string>
    <string name="slideshow_fold">Fold</string>
    <string name="slideshow_corner">Corner</string>

    <string name="effectduration">Effect Duration</string>
    <string name="period_5">5s</string>
    <string name="period_10">10s</string>
    <string name="period_15">15s</string>
    <string name="period_20">20s</string>

    <string name="none">None</string>

    <!-- hint -->
    <string name="hint_select">Select</string>
    <string name="hint_play">Play</string>
    <string name="hint_info">Info</string>
    <string name="hint_options">Options</string>
    <string name="hint_toolbar">Toolbar</string>

    <!-- info -->
    <string name="filename">File Name :</string>
    <string name="filesize">File Size :</string>
    <string name="duration">Duration :</string>
    <string name="title">Title :</string>
    <string name="album">Album :</string>
    <string name="artist">Artist :</string>
    <string name="bitrate">Bit Rate :</string>
    <string name="resolution">Resolution :</string>
    <string name="mimetype">Type :</string>
    <string name="time">Time :</string>

    <!-- Common -->
    <string name="playlist">PlayList</string>
    <string name="select">Select</string>
    <string name="selectall">Select all</string>
    <string name="update">Update</string>
    <string name="addremove">Add/Remove</string>
    <string name="deleteall">Delete all</string>
    <string name="titlesort">Sort</string>
    <string name="sort">Sort</string>
    <string name="save">Save</string>
    <string name="abort">Abort</string>
    <string name="back">Back</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="music">Music</string>
    <string name="dot">...</string>
    <string name="returntotheprevious">Return to the previous</string>
    <string name="savesuccess">Save successfully</string>
    <string name="deletesuccess">Delete successfully</string>
    <string name="abortedit">Abort edit</string>
    <string name="selectfilefrom">Select pdf from</string>
    <string name="backgroundmusic">Background music</string>
    <string name="slideshow">Slideshow</string>
    <string name="filenotsupport">File not support</string>

    <!-- Log file string -->
    <string name="starttime">Start time :</string>
    <string name="endtime">End time :</string>
    <string name="playListno">File No. :</string>
    <string name="lastplayfilename">Last played file name :</string>
    <string name="lastbackgroundmusicfilename">Last file name of background music :</string>
    <string name="storagepath">Storage path :</string>
    <string name="repeatmode">Repeat mode :</string>
    <string name="slideshoweffectlog">Slideshow Effect :</string>
    <string name="errorfilelistasbelow">Error file(s) list as below :</string>
    <string name="effectdurationsec">Effect Duration :</string>

    <string name="sdcard_not_exits">No SD card.</string>

    <string name="not_available">Not available</string>

    <!-- MuPdf -->
	<string name="version">1.7a (git build)</string>
	<string name="no_media_warning">Storage media not present</string>
	<string name="no_media_hint">Sharing the storage media with a PC can make it inaccessible</string>
	<string name="cancel">Cancel</string>
	<string name="search_backwards">Search backwards</string>
	<string name="search_forwards">Search forwards</string>
	<string name="search_document">Search document</string>
	<string name="picker_title_App_Ver_Dir">%1$s %2$s: %3$s</string>
	<string name="outline_title">Table of Contents</string>
	<string name="enter_password">Enter password</string>
	<string name="text_not_found">Text not found</string>
	<string name="searching_">Searching&#8230;</string>
	<string name="toggle_links">Highlight and enable links</string>
	<string name="no_further_occurrences_found">No further occurrences found</string>
	<!--<string name="select">Select</string>-->
	<string name="search">Search</string>
	<string name="copy">Copy</string>
	<string name="strike_out">Strike-out</string>
    <!--<string name="delete">Delete</string>-->
    <string name="highlight">Highlight</string>
    <string name="underline">Underline</string>
    <string name="edit_annotations">Edit annotations</string>
    <string name="ink">Ink</string>
    <!--<string name="save">Save</string>-->
    <string name="print">Print</string>
    <string name="dismiss">Dismiss</string>
    <string name="parent_directory">[Up one level]</string>
    <!--<string name="yes">Yes</string>-->
    <!--<string name="no">No</string>-->
    <string name="entering_reflow_mode">Entering reflow mode</string>
    <string name="leaving_reflow_mode">Leaving reflow mode</string>
    <string name="print_failed">Print failed</string>
    <string name="select_text">Select text</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="no_text_selected">No text selected</string>
    <string name="draw_annotation">Draw annotation</string>
    <string name="nothing_to_save">Nothing to save</string>
    <string name="document_has_changes_save_them_">Document has changes. Save them?</string>
    <string name="cannot_open_document">Cannot open document</string>
    <string name="cannot_open_document_Reason">Cannot open document: %1$s</string>
    <string name="cannot_open_file_Path">Cannot open file: %1$s</string>
    <string name="cannot_open_buffer">Cannot open buffer</string>
    <string name="fill_out_text_field">Fill out text field</string>
    <string name="okay">Okay</string>
    <string name="choose_value">Choose value</string>
    <string name="not_supported">Not supported</string>
    <string name="copy_text_to_the_clipboard">Copy text to the clipboard</string>
    <string name="more">More</string>
    <string name="accept">Accept</string>
    <string name="copy_text">copy text</string>
    <string name="format_currently_not_supported">Format currently not supported</string>
    <string name="toggle_reflow_mode">Toggle reflow mode</string>
</resources>
