<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_pure">

    <FrameLayout
        android:id="@+id/dialog_left_frame_fake"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2">
    </FrameLayout>

    <FrameLayout
        android:id="@+id/dialog_right_frame"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginRight="25dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <FrameLayout
                android:id="@+id/dialog_up_frame_fake"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
            </FrameLayout>
            <FrameLayout
                android:id="@+id/dialog_frame"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/menu_selection_blue_bg_black"
                android:padding="20dp"
                android:layout_weight="1">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/dialog_text"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:textSize="@dimen/dialog_text_size"
                        android:textColor="#FFFFFFFF"
                        android:gravity="center"
                        android:layout_gravity="center"/>
                    <LinearLayout
                        android:id="@+id/dialog_btn_group"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:orientation="horizontal">
                        <Button
                            android:id="@+id/dialog_btn_internal"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/internal"
                            android:textSize="@dimen/dialog_btn_text_size"
                            android:textColor="@drawable/selection_str_bg_white"
                            android:background="@drawable/button_selection_blue_bg_white"
                            android:focusable="true"/>

                        <Button
                            android:id="@+id/dialog_btn_usb"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginLeft="10dp"
                            android:text="@string/usb"
                            android:textSize="@dimen/dialog_btn_text_size"
                            android:textColor="@drawable/selection_str_bg_white"
                            android:background="@drawable/button_selection_blue_bg_white"
                            android:focusable="true"/>

                        <Button
                            android:id="@+id/dialog_btn_sdcard"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginLeft="10dp"
                            android:text="@string/sdcard"
                            android:textSize="@dimen/dialog_btn_text_size"
                            android:textColor="@drawable/selection_str_bg_white"
                            android:background="@drawable/button_selection_blue_bg_white"
                            android:focusable="true"/>
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>
            <FrameLayout
                android:id="@+id/dialog_down_frame_fake"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
            </FrameLayout>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>