<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">
    <LinearLayout
        android:id="@+id/home_group"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:id="@+id/home_left_frame_fake"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10">
        </FrameLayout>

        <FrameLayout
            android:id="@+id/home_center_frame"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4">
            <LinearLayout
                android:id="@+id/home_title_btn_group"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">
                <FrameLayout
                    android:id="@+id/home_title_frame"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/home_btn_frame"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2">
                    <LinearLayout
                        android:id="@+id/home_btn_group"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|top">
                        <Button
                            android:id="@+id/btn_play"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/play"
                            android:textColor="@drawable/selection_str_bg_white"
                            android:textSize="@dimen/home_btn_text_size"
                            android:textStyle="bold"
                            android:background="@drawable/button_selection_blue_bg_black"
                            android:focusable="true"/>

                        <Button
                            android:id="@+id/btn_compose"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/compose"
                            android:textColor="@drawable/selection_str_bg_white"
                            android:textSize="@dimen/home_btn_text_size"
                            android:textStyle="bold"
                            android:background="@drawable/button_selection_blue_bg_black"
                            android:layout_marginTop="@dimen/home_btn_margin_top"
                            android:focusable="true"/>

                        <Button
                            android:id="@+id/btn_settings"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/settings"
                            android:textColor="@drawable/selection_str_bg_white"
                            android:textSize="@dimen/home_btn_text_size"
                            android:textStyle="bold"
                            android:background="@drawable/button_selection_blue_bg_black"
                            android:layout_marginTop="@dimen/home_btn_margin_top"
                            android:focusable="true"/>
                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/btn_home_right_frame_fake"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
        </FrameLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="@dimen/home_logo_image_width_size"
        android:layout_height="@dimen/home_logo_image_height_size"
        android:scaleType="centerInside"
        android:layout_marginBottom="25dp"
        android:layout_marginRight="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:visibility="invisible"/>
</RelativeLayout>