<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id= "@+id/hintgridview"
    android:layout_width= "match_parent"
    android:layout_height= "match_parent"
    android:background="@drawable/background_pure">

    <FrameLayout
        android:id="@+id/compose_edit_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <FrameLayout
                android:id="@+id/compose_edit_left_frame"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:padding="50dp"
                android:layout_weight="15">
                <RelativeLayout
                    android:layout_width= "match_parent"
                    android:layout_height= "match_parent">
                    <ImageView
                        android:id="@+id/compose_edit_left_icon"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/compose_logo_icon"
                        android:scaleType="fitEnd"
                        android:layout_gravity="center_horizontal|bottom"
                        android:visibility="gone"/>
                    <TextView
                        android:id="@+id/compose_edit_left_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/compose"
                        android:textSize="@dimen/playlist_menu_title_text_size"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal|bottom"
                        android:layout_marginBottom="@dimen/compose_title_text_margin_bottom"
                        android:gravity="center_horizontal|bottom"/>
                </RelativeLayout>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/compose_edit_list_frame"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="29"
                android:layout_marginLeft="50dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <FrameLayout
                        android:id="@+id/compose_edit_list_up_frame_fake"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3">
                    </FrameLayout>

                    <FrameLayout
                        android:id="@+id/compose_edit_list_center_frame"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="56"
                        android:background="@color/transparent">
                        <!--android:background="@drawable/menu_selection_blue_bg_black"-->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">
                            <FrameLayout
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="20">
                                <LinearLayout
                                    android:orientation="horizontal"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent">
                                    <FrameLayout
                                        android:id="@+id/compose_edit_center_frame"
                                        android:layout_width="0dp"
                                        android:layout_height="match_parent"
                                        android:layout_marginRight="@dimen/compose_edit_list_center_margin_right"
                                        android:layout_weight="1">

                                        <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:orientation="vertical">
                                            <TextView
                                                android:layout_width="match_parent"
                                                android:layout_height="0dp"
                                                android:layout_weight="1"
                                                android:gravity="center"
                                                android:text="@string/title_playlist"
                                                android:textColor="@drawable/selection_str_bg_white"
                                                android:textSize="@dimen/home_btn_text_size"
                                                android:textStyle="bold"
                                                android:background="@drawable/sort_selection_blue_bg_black"
                                                android:layout_marginBottom="10dp"/>
                                            <FrameLayout
                                                android:layout_width="match_parent"
                                                android:layout_height="0dp"
                                                android:layout_weight="10"
                                                android:background="@drawable/compose_edit_selection_blue_bg_black">
                                                <ListView
                                                    android:id="@+id/compose_edit_center_list"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent"
                                                    android:background="@color/transparent"
                                                    android:cacheColorHint="#00000000"
                                                    android:divider="@null"
                                                    android:listSelector="@drawable/settings_selection_bg_blue"

                                                    android:scrollbarSize="10dp"
                                                    android:scrollbarThumbVertical="@drawable/custom_scroll_style"
                                                    android:transcriptMode="alwaysScroll"

                                                    android:focusable="true" >
                                                </ListView>
                                            </FrameLayout>
                                        </LinearLayout>
                                    </FrameLayout>

                                    <FrameLayout
                                        android:id="@+id/compose_edit_right_frame"
                                        android:layout_width="0dp"
                                        android:layout_height="match_parent"
                                        android:layout_marginLeft="@dimen/compose_edit_list_right_margin_left"
                                        android:layout_weight="1">

                                        <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:orientation="vertical">
                                            <TextView
                                                android:layout_width="match_parent"
                                                android:layout_height="0dp"
                                                android:layout_weight="1"
                                                android:gravity="center"
                                                android:text="@string/title_source"
                                                android:textColor="@drawable/selection_str_bg_white"
                                                android:textSize="@dimen/home_btn_text_size"
                                                android:textStyle="bold"
                                                android:background="@drawable/sort_selection_blue_bg_black"
                                                android:layout_marginBottom="10dp"/>
                                            <FrameLayout
                                                android:layout_width="match_parent"
                                                android:layout_height="0dp"
                                                android:layout_weight="10"
                                                android:background="@drawable/compose_edit_selection_blue_bg_black">
                                                <ListView
                                                    android:id="@+id/compose_edit_right_list"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent"
                                                    android:background="@color/transparent"
                                                    android:cacheColorHint="#00000000"
                                                    android:divider="@null"
                                                    android:listSelector="@drawable/settings_selection_bg_blue"
                                                    android:scrollbarSize="10dp"
                                                    android:scrollbarThumbVertical="@drawable/custom_scroll_style"
                                                    android:transcriptMode="alwaysScroll"
                                                    android:focusable="true" >
                                                </ListView>
                                            </FrameLayout>
                                        </LinearLayout>
                                    </FrameLayout>
                                </LinearLayout>
                            </FrameLayout>
                            <FrameLayout
                                android:id="@+id/compose_edit_list_down_hint_frame"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="2"
                                android:layout_gravity="top">
                                <LinearLayout
                                    android:orientation="horizontal"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="right">
                                    <ImageView
                                        android:id="@+id/compose_edit_list_down_ok_icon"
                                        android:layout_width="@dimen/compose_edit_options_icon_image_size"
                                        android:layout_height="@dimen/compose_edit_options_icon_image_size"
                                        android:src="@drawable/ok_icon"
                                        android:scaleType="fitCenter"
                                        android:layout_gravity="center_vertical"
                                        android:layout_marginRight="10dp"/>
                                    <TextView
                                        android:id="@+id/compose_edit_list_down_ok_text"
                                        android:layout_width="wrap_content"
                                        android:layout_height="match_parent"
                                        android:gravity="center_vertical|left"
                                        android:text="@string/hint_select"
                                        android:textColor="@color/blue3"
                                        android:textSize="@dimen/compose_edit_options_icon_text_size"
                                        android:textStyle="bold"
                                        android:layout_marginRight="15dp"/>
                                    <ImageView
                                        android:id="@+id/compose_edit_list_down_toolbar_icon"
                                        android:layout_width="@dimen/compose_edit_options_icon_image_size"
                                        android:layout_height="@dimen/compose_edit_options_icon_image_size"
                                        android:src="@drawable/options_icon"
                                        android:scaleType="fitCenter"
                                        android:layout_gravity="center_vertical"
                                        android:layout_marginRight="10dp"/>
                                    <TextView
                                        android:id="@+id/compose_edit_list_down_toolbar_text"
                                        android:layout_width="wrap_content"
                                        android:layout_height="match_parent"
                                        android:gravity="center_vertical|left"
                                        android:text="@string/hint_toolbar"
                                        android:textColor="@color/blue3"
                                        android:textSize="@dimen/compose_edit_options_icon_text_size"
                                        android:textStyle="bold"/>
                                </LinearLayout>
                            </FrameLayout>
                        </LinearLayout>
                    </FrameLayout>
                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/compose_edit_left_frame_fake"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
            </FrameLayout>
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <FrameLayout
            android:id="@+id/compose_hint_left_frame"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/hint_bg">
            <!--android:background="@drawable/hint_background_style">-->
            <GridView
                android:id="@+id/compose_edit_left_hint_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:verticalSpacing="20dp"
                android:cacheColorHint="#00000000"
                android:divider="@null"
                android:listSelector="@drawable/hint_list_selection"
                android:numColumns="1"
                android:layout_gravity="center"

                android:focusable="true" >
            </GridView>
        </FrameLayout>
        <FrameLayout
            android:id="@+id/compose_hint_right_frame_fake"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4">
        </FrameLayout>
    </LinearLayout>
</RelativeLayout>